hphp/hack/test/typecheck/expression_trees/property_access_splice2.php.like_types.exp
File "property_access_splice2.php", line 18, characters 14-29:
Typing error (Typing[4110])
  File "property_access_splice2.php", line 18, characters 14-29:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "property_access_splice2.php", line 10, characters 11-48:
  But got `dynamic` because it is an unenforceable type
